# cartesiangenerator

./: pyproject.toml  readme.md  server.py
templates/: graph.tex  graph.tex.jinja2  index.html
templates/.auctex-auto/: graph.el
