[tool.poetry]
name = "graphgenerator"
version = "0.1.0"
description = ""
authors = ["cdknight <me@ramesh.tv>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
